2007-10-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/plugindata.h, src/plugins.c:
   Add encoding related functions to the plugin API.
 * data/autocomplete.conf, doc/geany.txt, doc/geany.html, src/editor.c:
   Add special key wordchars to autocomplete.conf to let the user
   redefine used wordchars.


2007-10-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/vte.c:
   Only connect vte_keypress() if enable_bash_keys pref is not set.
 * src/document.c, src/document.h, src/editor.c, src/editor.h,
   src/interface.c, src/keyfile.c, src/plugindata.h, src/prefs.c,
   geany.glade, THANKS:
   Apply patch from Catalin Marinas to add a 'newline strips trailing
   spaces' pref (thanks).


2007-10-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/tm_tag.c, tagmanager/c.c, TODO:
   Parse arrays, const and pointers in C-like function return types
   (and store in varType).
   Fix some indentation.
 * src/interface.c, src/keybindings.c, src/prefs.c, src/callbacks.c,
   src/callbacks.h, src/keyfile.c, src/document.c, src/document.h,
   src/editor.c, src/editor.h, src/ui_utils.c, geany.glade:
   Add Indent Type option in the Document menu.
   Add 'Detect from file' Editor indentation pref.
   Show TAB or SP for current document's indent type.
   Minor editing of Document menu and editor Indentation prefs group.
   Use GString for statusbar statistics.


2007-10-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, src/callbacks.c, src/callbacks.h, src/interface.c:
   Suppress selection changed signal when switching between open files
   and symbol list.
 * src/plugins.c, src/plugindata.h, plugins/export.c:
   Add dialogs_show_save_as() to the plugin API.
   Fix wrong callback signatures in Export plugin and make menu item
   document sensitive.


2007-10-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/svndiff.c, plugins/Makefile.am, plugins/makefile.win32,
   po/POTFILES.in: