@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4.1: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2007-10-02" />
+<meta name="date" content="2007-10-18" />
 <style type="text/css">
 
 /*
@@ -133,7 +133,7 @@ dt {
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2007-10-02</td></tr>
+<td>2007-10-18</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.13</td></tr>
 </tbody>
@@ -553,8 +553,8 @@ line option -- see the section called <a class="reference" href="#command-line-o
 <p>If you have installed <tt class="docutils literal"><span class="pre">libvte.so</span></tt> in your system, it is loaded
 automatically by Geany, and you will have a terminal widget in the
 notebook at the bottom.</p>
-<p>If Geany cannot find <tt class="docutils literal"><span class="pre">libvte.so</span></tt> at startup, the terminal widget will
-not be loaded. So there is no need to install the package containing
+<p>If Geany cannot find any <tt class="docutils literal"><span class="pre">libvte.so</span></tt> at startup, the terminal widget
+will not be loaded. So there is no need to install the package containing
 this file in order to run Geany. Additionally, you can disable the use
 of the terminal widget by command line option, for more information
 see the section called <a class="reference" href="#command-line-options">Command line options</a>.</p>
@@ -575,18 +575,22 @@ you can use the argument <tt class="docutils literal"><span class="pre">--login<
 <div class="note">
 <p class="first admonition-title">Note</p>
 <p class="last">Geany tries to load <tt class="docutils literal"><span class="pre">libvte.so</span></tt>. If this fails, it tries to load
-<tt class="docutils literal"><span class="pre">libvte.so.4</span></tt>. If this fails too, you should check whether you
+some other filenames. If this fails too, you should check whether you
 installed libvte correctly. Again, Geany also runs without this
 library.</p>
 </div>
 <p>It could be, that the library is called something else than
-<tt class="docutils literal"><span class="pre">libvte.so.4</span></tt> (e.g. on FreeBSD 6.0 it is called <tt class="docutils literal"><span class="pre">libvte.so.8</span></tt>). So
+<tt class="docutils literal"><span class="pre">libvte.so</span></tt> (e.g. on FreeBSD 6.0 it is called <tt class="docutils literal"><span class="pre">libvte.so.8</span></tt>). So
 please set a link to the correct file (as root):</p>
 <pre class="literal-block">
-# ln -s /usr/lib/libvte.so.X /usr/lib/libvte.so.4
+# ln -s /usr/lib/libvte.so.X /usr/lib/libvte.so
 </pre>
 <p>Obviously, you have to adjust the paths and set X to the number of your
 <tt class="docutils literal"><span class="pre">libvte.so</span></tt>.</p>
+<p>You can also specify the filename of the VTE library to use on the command
+line (see the section called <a class="reference" href="#command-line-options">Command line options</a>) or at compile time
+by specifying the command line option <tt class="docutils literal"><span class="pre">--with-vte-module-path</span></tt> to
+./configure.</p>
 </div>
 <div class="section">
 <h3><a class="toc-backref" href="#id18" id="defining-own-widget-styles-using-gtkrc-2-0" name="defining-own-widget-styles-using-gtkrc-2-0">Defining own widget styles using .gtkrc-2.0</a></h3>
@@ -3092,7 +3096,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2007-10-18 19:44 UTC.
+Generated on: 2007-10-19 14:35 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
